k8s/comment-service-deployment.yaml
######### COMMENT SERVICE #########
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service-deployment
  labels:
    app: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        app: comment-service
    spec:
      containers:
        - image: stassig/project-comment-service
          name: comment-service
          ports:
            - containerPort: 3004
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
  labels:
    app: comment-service-k8s
spec:
  type: ClusterIP
  ports:
    - name: "comment-service-port"
      port: 3004
      targetPort: 3004
  selector:
    app: comment-service
---
