k8s/upload-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service-deployment
  labels:
    app: upload-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        app: upload-service
    spec:
      imagePullSecrets:
        - name: acr-credentials
      containers:
        - image: g3Registry.azurecr.io/upload-service
          imagePullPolicy: IfNotPresent
          name: upload-service
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  labels:
    app: upload-service-k8s
spec:
  type: ClusterIP
  ports:
    - name: "upload-service-port"
      port: 3001
      targetPort: 3001
  selector:
    app: upload-service
