k8s/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
spec:
  rules:
    - http:
        paths:
          - path: /comment
            pathType: Prefix
            backend:
              service:
                name: comment-service
                port:
                  number: 3004
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 3003
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3002
